--- a/src/views/index.html
+++ b/src/views/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/38432ca5e6.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="../../public/style/index.css">
     <title>Pinterest Pin Board Downloader</title>
 </head>
 <body>
@@ -16,13 +16,13 @@
         <div class="form-container">
             <form action="" id="form-pin-download">
                 <input type="url" placeholder="Pin Board URL" name="pin-board-url">
-                <button type="submit"><i class="fa-solid fa-download"></i></button>
+                <button type="submit"><i class="fa-solid fa-download" id="btn-icon"></i></button>
             </form>
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.13.2/themes/smoothness/jquery-ui.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"></script>
-    <script src="index.js"></script>
+    <script src="../../public/script/index.js"></script>
 </body>
 </html>
