--- a/src/views/index.html
+++ b/src/views/index.html
@@ -19,6 +19,11 @@
                 <button type="submit"><i class="fa-solid fa-download" id="btn-icon"></i></button>
             </form>
         </div>
+        <div class="download-container">
+            <label for="download-link">
+                <a href="#" id="download-link"></a>
+            </label>    
+        </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.13.2/themes/smoothness/jquery-ui.css">
